--- a/index.html
+++ b/index.html
@@ -57,8 +57,10 @@
        <div class="container col-xxl-8 px-4 py-5">
            <div class="row g-5 py-5 rows-cols-1 row-cols-lg-2">
              <div class="col order-last order-lg-first">
-              <h1 class="display-5 fw-bold lh-1 mb-3">APP NAME: A Coding Project</h1>
-              <h4 class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem quo magni similique porro quia itaque.</h4>
+              <h1 class="display-5 fw-bold lh-1 mb-3">FIZZ BUZZ: A Coding Project</h1>
+              <h4 class="lead">
+                when it counts you Fizz Buzz. A Javascript coding exercises using Loops. write a program that prints the numbers from 1 to 100 and for multipless of '3' display 'Fizz' instead of the number and for the multiples of '5' displkay 'Buzz'. if a multiple of both display 'FizzBuz'
+              </h4>
               <ul class="fa-ul pt-2 checklist">
                 <li><span class="fa-li"><i class="fas fa-check-square"></i></span>CSS and Bootstrap Layout</li>
                 <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript Fundamentals</li>
@@ -127,12 +129,12 @@
     <script src="js/site.js"></script>
     <script src="js/prism.js"></script>
     <script>
-      Prism.plugins.NormalizeWhitespace.setDefaults({
-        'remove-trailing': true,
-        'remove-indent': true,
-        'left-trim': true,
-        'right-trim': true,
-      })
+      // Prism.plugins.NormalizeWhitespace.setDefaults({
+      //   'remove-trailing': true,
+      //   'remove-indent': true,
+      //   'left-trim': true,
+      //   'right-trim': true,
+      // })
     </script>
 </body>
 
