--- a/app.html
+++ b/app.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>App Name: A Coding Project By Cristian To-ong</title>
+    <title>FIZZ BUZZ: A Coding Project By Cristian To-ong</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -52,7 +52,40 @@
 
 <main class="flex-shrink-0">
   <div class="container">
-    App
+    <div class="row row-cols-1 row-cols-lg-2">
+      <div class="col col-lg-4 border-end border-2">
+        <h1>FIZZBUZZ: A Coding Project</h1>
+        <h4 class="lead">                when it counts you Fizz Buzz. A Javascript coding exercises using Loops. write a program that prints the numbers from 1 to 100 and for multipless of '3' display 'Fizz' instead of the number and for the multiples of '5' displkay 'Buzz'. if a multiple of both display 'FizzBuz'</h4>
+        <h2 class="mt-5 border-bottom border-2">Instructions</h2>
+        <p>Enter a starting value and a ending value. Press the button and the values will appear. </p>
+      </div>
+      <div class="col col-lg-8">
+        <div>
+          <h5>Enter Values</h5>
+          <form class="row gy-2 gx-3">
+              <div class="col">
+                <input class="form-control" id="fizzValue" type="number" placeholder="Start Value" value=0 aria-label="Fizz Value"> 
+              </div>
+              <div class="col">
+                <input class="form-control" id="buzzValue" type="number" placeholder="End Value" value=100 aria-label="Buzz Value"> 
+              </div>
+              <div class="col-12 d-flex justify-content-end">
+                <button id="btnSubmit" type="submit" class="btn btn-dark btn-lg">Display the Numbers</button>
+              </div>
+          </form>
+          <!-- results -->
+          <h2 class="mt-5 border-bottom border-2">Results</h2>
+          <div class="table-responsive">
+            <table class="table table-striped table-sm">
+              <tbody id="results">
+                <!-- Results Go Here -->
+                
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </main>
 
@@ -79,6 +112,16 @@
             </div>
         </div>
     </footer> 
+
+    <template id="fbTemplate">
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+    </template>
     
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
@@ -86,6 +129,10 @@
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
+    </script>
+    <script src="js/site.js"></script>
+    <script>
+      document.getElementById('btnSubmit').addEventListener('click', getValues);
     </script>
 </body>
 
